--- a/layouts/docs/bazzar.html
+++ b/layouts/docs/bazzar.html
@@ -30,7 +30,7 @@
       <p>
         Recommended repositories are marked with a {{ partial "icons/heart" (dict "class" "align-text-top inline-flex shrink-0 h-[1.125rem] w-[1.125rem] color text-red-600") }}.<br />
         Repositories with some activity within the last six months are marked with a {{ partial "icons/lightning" (dict "class" "align-text-bottom inline-flex shrink-0 h-[1.0625rem] w-[1.0625rem] color text-green-500") }}.<br />
-        Want your repository listed here? Just submit a PR to the <a href="https://github.com/redis/redis-doc/pull/new">redis-doc repository</a>.
+        Want your repository listed here? Just submit a PR to the <a href="https://github.com/redis/redis-doc/pull/new" target="_blank">redis-doc repository</a>.
       </p>
 
       <dl class="mt-8">
@@ -49,7 +49,7 @@
               {{ range $sorted }}
                 <div class="grid grid-cols-[repeat(16,1fr)] items-start gap-4 py-4 border-t border-slate-200/75 text-sm">
                   <div class="col-span-12 flex flex-col">
-                    <a href="https://{{ .Params.repository }}" class="">
+                    <a href="https://{{ .Params.repository }}" target="_blank">
                       <div class="flex items-center">
                         {{ if and .Params.recommended .Params.active }}
                           {{ partial "icons/heart" (dict "class" "shrink-0 h-[1.125rem] w-[1.125rem] text-red-500") }}
@@ -78,7 +78,7 @@
                       License: {{ .Params.license | default "Other" }}
                     </div>
                     {{ if .Params.homepage }}
-                      <a href="{{ .Params.homepage }}" class="mt-1.5 text-current hover:text-indigo-600 opacity-50 hover:opacity-100 flex">
+                      <a href="{{ .Params.homepage }}" class="mt-1.5 text-current hover:text-indigo-600 opacity-50 hover:opacity-100 flex"  target="_blank">
                         Homepage
                         {{ partial "icons/home" (dict "class" "ml-1 shrink-0 h-[1.0625rem] w-[1.0625rem]") }}
                       </a>
