--- a/layouts/docs/bazzar.html
+++ b/layouts/docs/bazzar.html
@@ -26,7 +26,8 @@
 
     <section class="prose prose-slate w-full max-w-[47rem] py-12">
       <h1>{{ .Title }}</h1>
-      {{- .Render "content" -}}
+      {{ with .Params.description }}<p class="text-lg -mt-5 mb-10">{{ . | markdownify }}</p>{{ end }}
+      {{- .Content -}}
       <p>
         Recommended repositories are marked with a {{ partial "icons/heart" (dict "class" "align-text-top inline-flex shrink-0 h-[1.125rem] w-[1.125rem] color text-red-600") }}.<br />
         Repositories with some activity within the last six months are marked with a {{ partial "icons/lightning" (dict "class" "align-text-bottom inline-flex shrink-0 h-[1.0625rem] w-[1.0625rem] color text-green-500") }}.<br />
