--- a/layouts/resources/bazzar.html
+++ b/layouts/resources/bazzar.html
@@ -35,62 +35,27 @@
       </p>
 
       <dl class="mt-8">
-          {{ $pages := .Resources.ByType "page" }}
-          {{ range $id, $name := $groups }}
-            {{ if $has_groups }}
-              <dt id="{{ $id }}" class="font-semibold text-slate-900 pb-3">
-                {{- $name -}}
-              </dt>
-            {{ end }}
-            {{ $repos := (where $pages ".Params.group" $id) }}
-            {{ $sorted := sort (where (where $repos ".Params.recommended" true) ".Params.active" true) ".Params.stargazers_count" "desc" }}
-            {{ $sorted = $sorted | append (sort (where (where $repos ".Params.recommended" false) ".Params.active" true) ".Params.stargazers_count" "desc") }}
-            {{ $sorted = $sorted | append (sort (where (where $repos ".Params.recommended" true) ".Params.active" "!=" true) ".Params.stargazers_count" "desc") }}
-            {{ $sorted = $sorted | append (sort (where (where $repos ".Params.recommended" false) ".Params.active" "!=" true) ".Params.stargazers_count" "desc") }}
-            <dd class="mb-8">
-              {{ range $sorted }}
-                <div class="grid grid-cols-[repeat(16,1fr)] items-start gap-4 py-4 border-t border-slate-200/75 text-sm">
-                  <div class="col-span-12 flex flex-col">
-                    <a href="https://{{ .Params.repository }}" target="_blank">
-                      <div class="flex items-center">
-                        {{ if and .Params.recommended }}
-                          {{ partial "icons/heart" (dict "class" "mr-1 shrink-0 h-[1.125rem] w-[1.125rem] text-red-500") }}
-                          <span class="sr-only">[recommended]</span>
-                        {{ end }}
-                        {{ if .Params.active }}
-                          <span class="sr-only">[active]</span>
-                          {{ partial "icons/lightning" (dict "class" "mr-1 shrink-0 h-[1.0625rem] w-[1.0625rem] text-green-500") }}
-                        {{- end }}
-                        <strong>{{ .Title }}</strong>
-                      </div>
-                      <p class="ml-1 mt-1 mb-0">{{ .Description }}</p>
-                    </a>
-                  </div>
-                  <div class="col-span-4 mr-auto">
-                    {{ if .Params.stargazers_count }}
-                    <div class="flex items-center self-start mb-1.5">
-                      GitHub
-                      <div class="h-5 w-5 flex items-center justify-center mx-1">
-                        {{ partial "icons/star" (dict "class" "shrink-0 h-5 w-5 opacity-50") }}
-                      </div>
-                      {{ .Params.stargazers_count }}
-                    </div>
-                    {{ end }}
-                    <div>
-                      License: {{ .Params.license | default "Other" }}
-                    </div>
-                    {{ if .Params.homepage }}
-                      <a href="{{ .Params.homepage }}" class="mt-1.5 text-current hover:text-indigo-600 opacity-50 hover:opacity-100 flex"  target="_blank">
-                        Homepage
-                        {{ partial "icons/home" (dict "class" "ml-1 shrink-0 h-[1.0625rem] w-[1.0625rem]") }}
-                      </a>
-                    {{ end }}
-                  </div>
-                </div>
-              {{ end }}
-            </dd>
+        {{ $pages := .Resources.ByType "page" }}
+        {{ range $id, $name := $groups }}
+          {{ $repos := (where $pages ".Params.group" $id) }}
+          {{ $active := sort (where (where $repos ".Params.recommended" true) ".Params.active" true) ".Params.stargazers_count" "desc" }}
+          {{ $active = $active | append (sort (where (where $repos ".Params.recommended" false) ".Params.active" true) ".Params.stargazers_count" "desc") }}
+          {{ $inactive := sort (where (where $repos ".Params.recommended" true) ".Params.active" "!=" true) ".Params.stargazers_count" "desc" }}
+          {{ $inactive = $inactive | append (sort (where (where $repos ".Params.recommended" false) ".Params.active" "!=" true) ".Params.stargazers_count" "desc") }}
+          {{ if $has_groups }}
+            <dt id="{{ $id }}" class="font-semibold text-slate-900 pb-3">
+              {{- $name -}}
+            </dt>
+          {{ end }}
+          {{ if gt (len $active) 0 }}
+            {{ template "rows" (dict "rows" $active) }}
+          {{ end }}
+          {{ if gt (len $inactive) 0 }}
+            {{ template "rows" (dict "rows" $inactive) }}
+          {{ end }}
+          <div class="mb-8"></div>
         {{ end }}
-        </dl>
+      </dl>
     </section>
 
     {{ if $has_groups }}
@@ -110,4 +75,49 @@
       </section>
     {{ end }}
   </main>
+{{ end }}
+
+{{ define "rows" }}
+<dd>
+  {{ range .rows }}
+    <div class="grid grid-cols-[repeat(16,1fr)] items-start gap-4 py-4 border-t border-slate-200/75 text-sm">
+      <div class="col-span-12 flex flex-col">
+        <a href="https://{{ .Params.repository }}" target="_blank">
+          <div class="flex items-center">
+            {{ if and .Params.recommended }}
+              {{ partial "icons/heart" (dict "class" "mr-1 shrink-0 h-[1.125rem] w-[1.125rem] text-red-500") }}
+              <span class="sr-only">[recommended]</span>
+            {{ end }}
+            {{ if .Params.active }}
+              <span class="sr-only">[active]</span>
+              {{ partial "icons/lightning" (dict "class" "mr-1 shrink-0 h-[1.0625rem] w-[1.0625rem] text-green-500") }}
+            {{- end }}
+            <strong>{{ .Title }}</strong>
+          </div>
+          <p class="ml-1 mt-1 mb-0">{{ .Description }}</p>
+        </a>
+      </div>
+      <div class="col-span-4 mr-auto">
+        {{ if .Params.stargazers_count }}
+        <div class="flex items-center self-start mb-1.5">
+          GitHub
+          <div class="h-5 w-5 flex items-center justify-center mx-1">
+            {{ partial "icons/star" (dict "class" "shrink-0 h-5 w-5 opacity-50") }}
+          </div>
+          {{ .Params.stargazers_count }}
+        </div>
+        {{ end }}
+        <div>
+          License: {{ .Params.license | default "Other" }}
+        </div>
+        {{ if .Params.homepage }}
+          <a href="{{ .Params.homepage }}" class="mt-1.5 text-current hover:text-indigo-600 opacity-50 hover:opacity-100 flex"  target="_blank">
+            Homepage
+            {{ partial "icons/home" (dict "class" "ml-1 shrink-0 h-[1.0625rem] w-[1.0625rem]") }}
+          </a>
+        {{ end }}
+      </div>
+    </div>
+  {{ end }}
+</dd>
 {{ end }}
