--- a/layouts/resources/bazzar.html
+++ b/layouts/resources/bazzar.html
@@ -23,40 +23,43 @@
 
   <main class="docs w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16">
     {{ partial "docs-nav.html" . }}
+    <div class="w-full max-w-[47rem] py-12">
+      {{ partial "breadcrumbs" . }}
 
-    <section class="prose prose-slate w-full max-w-[47rem] py-12">
-      <h1>{{ .Title }}</h1>
-      {{ with .Params.description }}<p class="text-lg -mt-5 mb-10">{{ . | markdownify }}</p>{{ end }}
-      {{- .Content -}}
-      <p>
-        Recommended repositories are marked with a {{ partial "icons/heart" (dict "class" "align-text-top inline-flex shrink-0 h-[1.125rem] w-[1.125rem] color text-red-600") }}.<br />
-        Repositories with some activity within the last six months are marked with a {{ partial "icons/lightning" (dict "class" "align-text-bottom inline-flex shrink-0 h-[1.0625rem] w-[1.0625rem] color text-green-500") }}.<br />
-        Want your repository listed here? Just submit a PR to the <a href="https://github.com/redis/redis-doc/pull/new" target="_blank">redis-doc repository</a>.
-      </p>
+      <section class="prose prose-slate w-full max-w-[47rem] py-12">
+        <h1>{{ .Title }}</h1>
+        {{ with .Params.description }}<p class="text-lg -mt-5 mb-10">{{ . | markdownify }}</p>{{ end }}
+        {{- .Content -}}
+        <p>
+          Recommended repositories are marked with a {{ partial "icons/heart" (dict "class" "align-text-top inline-flex shrink-0 h-[1.125rem] w-[1.125rem] color text-red-600") }}.<br />
+          Repositories with some activity within the last six months are marked with a {{ partial "icons/lightning" (dict "class" "align-text-bottom inline-flex shrink-0 h-[1.0625rem] w-[1.0625rem] color text-green-500") }}.<br />
+          Want your repository listed here? Just submit a PR to the <a href="https://github.com/redis/redis-doc/pull/new" target="_blank">redis-doc repository</a>.
+        </p>
 
-      <dl class="mt-8">
-        {{ $pages := .Resources.ByType "page" }}
-        {{ range $id, $name := $groups }}
-          {{ $repos := (where $pages ".Params.group" $id) }}
-          {{ $active := sort (where (where $repos ".Params.recommended" true) ".Params.active" true) ".Params.stargazers_count" "desc" }}
-          {{ $active = $active | append (sort (where (where $repos ".Params.recommended" false) ".Params.active" true) ".Params.stargazers_count" "desc") }}
-          {{ $inactive := sort (where (where $repos ".Params.recommended" true) ".Params.active" "!=" true) ".Params.stargazers_count" "desc" }}
-          {{ $inactive = $inactive | append (sort (where (where $repos ".Params.recommended" false) ".Params.active" "!=" true) ".Params.stargazers_count" "desc") }}
-          {{ if $has_groups }}
-            <dt id="{{ $id }}" class="font-semibold text-slate-900 pb-3">
-              {{- $name -}}
-            </dt>
+        <dl class="mt-8">
+          {{ $pages := .Resources.ByType "page" }}
+          {{ range $id, $name := $groups }}
+            {{ $repos := (where $pages ".Params.group" $id) }}
+            {{ $active := sort (where (where $repos ".Params.recommended" true) ".Params.active" true) ".Params.stargazers_count" "desc" }}
+            {{ $active = $active | append (sort (where (where $repos ".Params.recommended" false) ".Params.active" true) ".Params.stargazers_count" "desc") }}
+            {{ $inactive := sort (where (where $repos ".Params.recommended" true) ".Params.active" "!=" true) ".Params.stargazers_count" "desc" }}
+            {{ $inactive = $inactive | append (sort (where (where $repos ".Params.recommended" false) ".Params.active" "!=" true) ".Params.stargazers_count" "desc") }}
+            {{ if $has_groups }}
+              <dt id="{{ $id }}" class="font-semibold text-slate-900 pb-3">
+                {{- $name -}}
+              </dt>
+            {{ end }}
+            {{ if gt (len $active) 0 }}
+              {{ template "rows" (dict "rows" $active) }}
+            {{ end }}
+            {{ if gt (len $inactive) 0 }}
+              {{ template "rows" (dict "rows" $inactive) }}
+            {{ end }}
+            <div class="mb-8"></div>
           {{ end }}
-          {{ if gt (len $active) 0 }}
-            {{ template "rows" (dict "rows" $active) }}
-          {{ end }}
-          {{ if gt (len $inactive) 0 }}
-            {{ template "rows" (dict "rows" $inactive) }}
-          {{ end }}
-          <div class="mb-8"></div>
-        {{ end }}
-      </dl>
-    </section>
+        </dl>
+      </section>
+    </div>
 
     {{ if $has_groups }}
       <section class="hidden xl:block w-52 h-full shrink-0">
