--- a/layouts/partials/feedback.html
+++ b/layouts/partials/feedback.html
@@ -1,11 +1,29 @@
-<form name="feedback" method="POST" data-netlify="true">
-  <label>How useful was this information?</label>
-  <textarea
-    class="form-textarea mt-1 block w-full h-24"
-    rows="3"
-    placeholder="Please provide more information."
-  ></textarea>
-  <button class="button-xl button-indigo" type="submit">
-    Submit
-  </button>
+  {{/*  Star rating adapted from https://codepen.io/chris22smith/pen/MJzLJN  */}}
+  <form name="page-feedback" method="POST" data-netlify="true">
+    <input name="origin" value="{{ .Permalink }}" class="hidden"/>
+  <div class="flex gap-2">
+    <span>How useful is this page?</span>
+    <div class="star-rating">
+      <input type="radio" id="5-stars" name="rating" value="5" />
+      <label for="5-stars" class="star">&#9733;</label>
+      <input type="radio" id="4-stars" name="rating" value="4" />
+      <label for="4-stars" class="star">&#9733;</label>
+      <input type="radio" id="3-stars" name="rating" value="3" />
+      <label for="3-stars" class="star">&#9733;</label>
+      <input type="radio" id="2-stars" name="rating" value="2" />
+      <label for="2-stars" class="star">&#9733;</label>
+      <input type="radio" id="1-star" name="rating" value="1" />
+      <label for="1-star" class="star">&#9733;</label>
+    </div>  
+  </div>
+  <div class="feedback-form">
+    <textarea
+      name="comment"
+      class="form-textarea mt-1 block w-full h-24"
+      rows="3"
+    ></textarea>
+    <button class="button button-indigo w-min justify-self-end" type="submit">
+      Submit
+    </button>
+  </div>
 </form>
