--- a/layouts/partials/feedback.html
+++ b/layouts/partials/feedback.html
@@ -1,15 +1,25 @@
-{{ $gh_repo := .Params.github_repo }}
-{{ $gh_path := .Params.github_path }}
-{{ $gh_branch := .Params.github_branch }}
-{{ $editURL := printf "%s/edit/%s/%s" $gh_repo $gh_branch $gh_path }}
-{{ $issuesURL := printf "%s/issues/new?title=%s" $gh_repo (safeURL $.Title )}}
-<div>
-  <h2>Feedback</h2>
-  <p>
-    If you've found issues on this page, or have suggestions for improvement, please submit a request to merge or open an issue in the repository.
-  </p>
-  <div class="flex justify-evenly text-redis-neutral-800">
-    <a {{ printf "href=%q" $editURL | safeHTMLAttr }} class="button button-outline" target="_blank">Edit this page</a>
-    <a {{ printf "href=%q" $issuesURL | safeHTMLAttr }} class="button button-outline" target="_blank">Create an issue</a>
+  {{/*  Star rating adapted from https://codepen.io/chris22smith/pen/MJzLJN  */}}
+  <form name="page-feedback" method="POST" data-netlify="true" class="page-feedback">
+    <input name="origin" value="{{ .Permalink }}" class="hidden"/>
+  <div class="flex gap-2 justify-center">
+    <span class="font-bold font-small">How useful is this page?</span>
+    <div class="star-rating">
+      {{ range $num := (seq 5) }}
+      <input type="radio" id="{{ $num }}-stars" name="rating" value="{{ $num }}" onchange="document.querySelector('#feedback-form').classList.remove('hidden')"/>
+      <label for="{{ $num }}-stars" class="star">&#9733;</label>
+      {{ end }}
+    </div>  
   </div>
-</div>
+  <div id="feedback-form" class="hidden">
+    <div class="feedback-submit">
+      <textarea
+        name="comment"
+        class="form-textarea mt-1 block w-full h-24"
+        rows="3"
+      ></textarea>
+      <button class="button button-indigo w-min justify-self-end" type="submit">
+        Submit
+      </button>
+    </div>
+  </div>
+</form>
