--- a/layouts/partials/feedback.html
+++ b/layouts/partials/feedback.html
@@ -1,7 +1,7 @@
   {{/*  Star rating adapted from https://codepen.io/chris22smith/pen/MJzLJN  */}}
   <form name="page-feedback" method="POST" data-netlify="true" class="page-feedback">
     <input name="origin" value="{{ .Permalink }}" class="hidden"/>
-  <div class="flex gap-2 justify-center">
+  <div class="grid gap-2 justify-center mt-10 pt-10 border-t-2">
     <span class="font-bold font-small">How useful is this page?</span>
     <div class="star-rating">
       {{ range $num := (seq 5) }}
