--- a/layouts/partials/meta-links.html
+++ b/layouts/partials/meta-links.html
@@ -4,7 +4,7 @@
 {{ $editURL := printf "%s/edit/%s/%s" $gh_repo $gh_branch $gh_path }}
 {{ $issuesURL := printf "%s/issues/new?title=%s" $gh_repo (safeURL $.Title )}}
 
-<nav class="flex flex-col gap-1">
+<nav class="flex flex-col gap-1 mb-6 pb-2 border-b-2">
   <a {{ printf "href=%q" $editURL | safeHTMLAttr }} target="_blank" class="group inline-flex items-center gap-1 text-sm text-slate-700 hover:text-indigo-600 mt-auto self-start">
     <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
       <path d="M11 44q-1.2 0-2.1-.9Q8 42.2 8 41V7q0-1.2.9-2.1Q9.8 4 11 4h17l12 12v7.8h-3V18H26V7H11v34h15v3Zm0-3V7v34Zm26.8-11.15 1.4 1.4-8.2 8.2V42h2.55l8.2-8.2 1.4 1.4-8.8 8.8H29v-5.35Zm5.35 5.35-5.35-5.35 3.05-3.05q.45-.45 1.05-.45.6 0 1.05.45l3.25 3.25q.45.45.45 1.05 0 .6-.45 1.05Z" fill="currentColor" />
