--- a/layouts/partials/feedback.html
+++ b/layouts/partials/feedback.html
@@ -1,8 +1,8 @@
   {{/*  Star rating adapted from https://codepen.io/chris22smith/pen/MJzLJN  */}}
   <form name="page-feedback" method="POST" data-netlify="true" class="page-feedback">
     <input name="origin" value="{{ .Permalink }}" class="hidden"/>
-  <div class="grid gap-2 justify-center mt-10 pt-10 border-t-2">
-    <span class="font-bold font-small">How useful is this page?</span>
+  <div class="grid justify-center mt-10 pt-10 border-t-2">
+    <span class="font-bold font-small">Rate this page</span>
     <div class="star-rating">
       {{ range $num := (seq 5) }}
       <input type="radio" id="{{ $num }}-stars" name="rating" value="{{ $num }}" onchange="document.querySelector('#feedback-form').classList.remove('hidden')"/>
@@ -14,7 +14,8 @@
     <div class="feedback-submit">
       <textarea
         name="comment"
-        class="form-textarea mt-1 block w-full h-24"
+        placeholder="Additional feedback"
+        class="border border-neutral-500 p-2 mt-1 block w-full h-24"
         rows="3"
       ></textarea>
       <button class="button button-indigo w-min justify-self-end" type="submit">
