--- a/layouts/partials/feedback.html
+++ b/layouts/partials/feedback.html
@@ -14,7 +14,7 @@
     <div class="feedback-submit">
       <textarea
         name="comment"
-        placeholder="Additional feedback"
+        placeholder="Why did you choose this rating?"
         class="border border-neutral-500 p-2 mt-1 block w-full h-24"
         rows="3"
       ></textarea>
