--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,3 +1,7 @@
+{{ define "head" }}
+  <script src="/js/codetabs.js" defer></script>
+{{ end }}
+
 {{ define "main" }}
   <main class="docs w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16">
     {{ partial "docs-nav.html" . }}
