--- a/layouts/commands/single.html
+++ b/layouts/commands/single.html
@@ -1,5 +1,6 @@
 {{ define "head" }}
   <script src="/js/cli.js" defer></script>
+  <script src="/js/codetabs.js" defer></script>
 {{ end }}
 
 {{ define "main" }}
