--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -28,12 +28,12 @@
   @apply font-semibold text-midnight-700 tracking-[-0.04em];
 }
 
-.prose pre {
-  @apply bg-slate-900 rounded-lg;
-}
-
 .prose p, .prose ol, .prose ul {
   @apply text-redis-neutral-800;
+}
+
+.prose pre {
+  @apply bg-slate-900 rounded-lg;
 }
 
 .prose pre > code {
@@ -431,43 +431,46 @@ select {
 }
 
 .codetabs > .label {
-  @apply px-2 pt-1 cursor-pointer text-white text-center bg-neutral-600 rounded-t-md border-t-2 border-x-2 border-neutral-600;
+  @apply px-2 pt-1 cursor-pointer text-white text-center italic bg-slate-600 rounded-t-lg border-t-2 border-x-2 border-neutral-600;
   min-width: 4rem;
 }
 
 .codetabs > .label:hover {
-  @apply text-indigo-600 bg-transparent;
+  @apply text-indigo-600 not-italic bg-transparent;
 }
 
 .codetabs > .label:active {
-  @apply text-indigo-600;
+  @apply text-indigo-600 not-italic;
 }
 
 .codetabs > .radiotab:checked + .label {
-  /* Chroma 'github-dark' theme background */
-  background-color: #0d1117;
-  border-color: #0d1117;
+  @apply bg-slate-900 border-slate-900 not-italic;
 }
 
 .codetabs > .panel {
-  @apply order-last hidden w-full pt-0 rounded-md rounded-tl-none relative bg-yellow-400;
+  @apply order-last hidden w-full pt-0 relative;
 }
 
 .codetabs > .radiotab:checked + .label + .panel {
   @apply block;
 }
 
-.codetabs > .panel .highlight > div,
-.codetabs > .panel .highlight pre {
-  @apply m-0 rounded-md rounded-tl-none;
+.codetabs > .panel .highlight .chroma {
+  @apply rounded-tl-none m-0;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.codetabs > .panel .highlight .chroma .lntd > pre {
+  @apply p-0;
 }
 
 .codetabs > .panel .clipboard-button {
-  @apply text-neutral-400 bg-neutral-600 absolute top-2 right-2 h-10 w-10 p-2 rounded-md;
+  @apply text-neutral-400 bg-slate-600 absolute top-2 right-2 h-10 w-10 p-2 rounded-md;
 }
 
 .codetabs > .panel .clipboard-button:hover {
-  @apply text-neutral-100;
+  @apply text-slate-100;
 }
 
 .codetabs > .panel .tooltip {
@@ -475,7 +478,7 @@ select {
 }
 
 .codetabs > .panel .tooltip > .tooltiptext {
-  @apply hidden bg-neutral-200 rounded-sm text-neutral-800 text-center text-xs p-2 absolute right-8 bottom-4;
+  @apply hidden bg-slate-200 rounded-sm text-slate-800 text-center text-xs p-2 absolute right-8 bottom-4;
 }
 
 .download-cards {
@@ -554,4 +557,408 @@ main.download:after {
 
 html {
   scrollbar-gutter: stable;
+}
+
+/* Chroma syntax highlighting
+/* Background */
+.bg {
+}
+
+/* PreWrapper */
+.chroma {
+  @apply p-4 overflow-x-auto text-slate-50 bg-slate-900 rounded-md;
+}
+
+/* Other */
+.chroma .x {}
+
+/* Error */
+.chroma .err {
+  @apply text-red-600;
+}
+
+/* CodeLine */
+.chroma .cl {}
+
+/* LineLink */
+.chroma .lnlinks {
+  @apply outline-none text-inherit no-underline;
+}
+
+/* LineTableTD */
+.chroma .lntd {
+  @apply align-top p-0 m-0 border-0;
+}
+
+/* LineTable */
+.chroma .lntable {
+  @apply p-0 m-0 border-0 w-auto;
+}
+
+/* LineHighlight */
+.chroma .hl {
+  @apply bg-yellow-100;
+}
+
+/* LineNumbersTable */
+.chroma .lnt {
+  @apply text-slate-400 whitespace-pre mr-4 px-2 select-none;
+}
+
+/* LineNumbers */
+.chroma .ln {
+  @apply text-slate-400 whitespace-pre mr-4 px-4 select-none;
+}
+
+/* Line */
+.chroma .line {
+  @apply flex;
+}
+
+/* Keyword */
+.chroma .k {
+  @apply text-red-400;
+}
+
+/* KeywordConstant */
+.chroma .kc {
+  @apply text-blue-400;
+}
+
+/* KeywordDeclaration */
+.chroma .kd {
+  @apply text-red-400;
+}
+
+/* KeywordNamespace */
+.chroma .kn {
+  @apply text-red-400;
+}
+
+/* KeywordPseudo */
+.chroma .kp {
+  @apply text-blue-400;
+}
+
+/* KeywordReserved */
+.chroma .kr {
+  @apply text-red-400;
+}
+
+/* KeywordType */
+.chroma .kt {
+  @apply text-red-400;
+}
+
+/* Name */
+.chroma .n {}
+
+/* NameAttribute */
+.chroma .na {}
+
+/* NameBuiltin */
+.chroma .nb {}
+
+/* NameBuiltinPseudo */
+.chroma .bp {}
+
+/* NameClass */
+.chroma .nc {
+  @apply text-orange-400 font-bold;
+}
+
+/* NameConstant */
+.chroma .no {
+  @apply text-blue-400 font-bold;
+}
+
+/* NameDecorator */
+.chroma .nd {
+  @apply text-purple-300 font-bold;
+}
+
+/* NameEntity */
+.chroma .ni {
+  @apply text-orange-400;
+}
+
+/* NameException */
+.chroma .ne {
+  @apply text-orange-400 font-bold;
+}
+
+/* NameFunction */
+.chroma .nf {
+  @apply text-purple-300 font-bold;
+}
+
+/* NameFunctionMagic */
+.chroma .fm {}
+
+/* NameLabel */
+.chroma .nl {
+  @apply text-blue-400 font-bold;
+}
+
+/* NameNamespace */
+.chroma .nn {
+  @apply text-red-400;
+}
+
+/* NameOther */
+.chroma .nx {}
+
+/* NameProperty */
+.chroma .py {
+  @apply text-blue-400;
+}
+
+/* NameTag */
+.chroma .nt {
+  @apply text-green-400;
+}
+
+/* NameVariable */
+.chroma .nv {
+  @apply text-blue-400
+}
+
+/* NameVariableClass */
+.chroma .vc {}
+
+/* NameVariableGlobal */
+.chroma .vg {}
+
+/* NameVariableInstance */
+.chroma .vi {}
+
+/* NameVariableMagic */
+.chroma .vm {}
+
+/* Literal */
+.chroma .l {
+  @apply text-blue-400;
+}
+
+/* LiteralDate */
+.chroma .ld {
+  @apply text-blue-400;
+}
+
+/* LiteralString */
+.chroma .s {
+  @apply text-blue-400;
+}
+
+/* LiteralStringAffix */
+.chroma .sa {
+  @apply text-blue-400
+}
+
+/* LiteralStringBacktick */
+.chroma .sb {
+  @apply text-blue-400;
+}
+
+/* LiteralStringChar */
+.chroma .sc {
+  @apply text-blue-400;
+}
+
+/* LiteralStringDelimiter */
+.chroma .dl {
+  @apply text-blue-400
+}
+
+/* LiteralStringDoc */
+.chroma .sd {
+  @apply text-blue-400;
+}
+
+/* LiteralStringDouble */
+.chroma .s2 {
+  @apply text-blue-400;
+}
+
+/* LiteralStringEscape */
+.chroma .se {
+  @apply text-blue-400
+}
+
+/* LiteralStringHeredoc */
+.chroma .sh {
+  @apply text-blue-400
+}
+
+/* LiteralStringInterpol */
+.chroma .si {
+  @apply text-blue-400;
+}
+
+/* LiteralStringOther */
+.chroma .sx {
+  @apply text-blue-400;
+}
+
+/* LiteralStringRegex */
+.chroma .sr {
+  @apply text-blue-400
+}
+
+/* LiteralStringSingle */
+.chroma .s1 {
+  @apply text-blue-400;
+}
+
+/* LiteralStringSymbol */
+.chroma .ss {
+  @apply text-blue-400;
+}
+
+/* LiteralNumber */
+.chroma .m {
+  @apply text-blue-400;
+}
+
+/* LiteralNumberBin */
+.chroma .mb {
+  @apply text-blue-400;
+}
+
+/* LiteralNumberFloat */
+.chroma .mf {
+  @apply text-blue-400;
+}
+
+/* LiteralNumberHex */
+.chroma .mh {
+  @apply text-blue-400;
+}
+
+/* LiteralNumberInteger */
+.chroma .mi {
+  @apply text-blue-400;
+}
+
+/* LiteralNumberIntegerLong */
+.chroma .il {
+  @apply text-blue-400;
+}
+
+/* LiteralNumberOct */
+.chroma .mo {
+  @apply text-blue-400;
+}
+
+/* Operator */
+.chroma .o {
+  @apply text-red-400 font-bold;
+}
+
+/* OperatorWord */
+.chroma .ow {
+  @apply text-red-400 font-bold;
+}
+
+/* Punctuation */
+.chroma .p {}
+
+/* Comment */
+.chroma .c {
+  @apply text-slate-500;
+  font-style: italic
+}
+
+/* CommentHashbang */
+.chroma .ch {
+  @apply text-slate-500;
+  font-style: italic
+}
+
+/* CommentMultiline */
+.chroma .cm {
+  @apply text-slate-500 italic;
+}
+
+/* CommentSingle */
+.chroma .c1 {
+  @apply text-slate-500 italic;
+}
+
+/* CommentSpecial */
+.chroma .cs {
+  @apply text-slate-500 font-bold italic;
+}
+
+/* CommentPreproc */
+.chroma .cp {
+  @apply text-slate-500 font-bold italic;
+}
+
+/* CommentPreprocFile */
+.chroma .cpf {
+  @apply text-slate-500 font-bold italic;
+}
+
+/* Generic */
+.chroma .g {}
+
+/* GenericDeleted */
+.chroma .gd {
+  @apply text-red-300 bg-red-900;
+}
+
+/* GenericEmph */
+.chroma .ge {
+  @apply italic;
+}
+
+/* GenericError */
+.chroma .gr {
+  @apply text-red-300;
+}
+
+/* GenericHeading */
+.chroma .gh {
+  @apply text-blue-400 font-bold;
+}
+
+/* GenericInserted */
+.chroma .gi {
+  @apply text-green-400 bg-green-900;
+}
+
+/* GenericOutput */
+.chroma .go {
+  @apply text-slate-400;
+}
+
+/* GenericPrompt */
+.chroma .gp {
+  @apply text-slate-400;
+}
+
+/* GenericStrong */
+.chroma .gs {
+  @apply font-bold;
+}
+
+/* GenericSubheading */
+.chroma .gu {
+  @apply text-blue-400;
+}
+
+/* GenericTraceback */
+.chroma .gt {
+  @apply text-red-400;
+}
+
+/* GenericUnderline */
+.chroma .gl {
+  @apply underline;
+}
+
+/* TextWhitespace */
+.chroma .w {
+  @apply text-slate-500;
 }
