--- a/layouts/shortcodes/codetabs.html
+++ b/layouts/shortcodes/codetabs.html
@@ -16,7 +16,9 @@
     <label class="label" for="{{ $tid }}">{{ index $tab "title" }}</label>
         {{ $pid := printf "panel_%s" $tid }}
     <div class="panel" tabindex="1" id="{{ $pid }}">
-        {{ index $tab "content" | markdownify }}
+        <div class="not-prose">
+            {{ index $tab "content" | markdownify }}
+        </div>
         <button class="clipboard-button" title="Copy to clipboard" onclick="copyCodeToClipboard('#{{ $pid }}')">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="currentColor">
                 <path d="M9 43.95q-1.2 0-2.1-.9-.9-.9-.9-2.1V10.8h3v30.15h23.7v3Zm6-6q-1.2 0-2.1-.9-.9-.9-.9-2.1v-28q0-1.2.9-2.1.9-.9 2.1-.9h22q1.2 0 2.1.9.9.9.9 2.1v28q0 1.2-.9 2.1-.9.9-2.1.9Zm0-3h22v-28H15v28Zm0 0v-28 28Z"/>
